# lio_sam_hesai

./: CMakeLists.txt  LICENSE  README.md  package.xml
config/: mapping.yaml  params.yaml  relocalization.yaml  rviz2.rviz
include/common/: compare_function.h  constant_variable.h  data_searcher.h  data_type.h  file_manager.h  frame.h  keyframe.cpp  keyframe.h  loopclosure_result.h  math_function.h  motion_interpolator.h  pointcloud_utility.h  ros_utility.h  save_file.h  sensor_data_type.h  sensor_data_utility.h  timer.h
include/imu/: data_synchronizer.h  imu_data_searcher.h  imu_interpolator.h  pre_integration.h
include/lidar/: lidar_distortion_corrector.h  lidar_model.h  lidar_point_type.h  pointcloud_cluster.h
include/lio_sam/: utility.hpp
include/loam/: feature_extractor.h  pointcloud_projector.h
include/optimization/g2o/: accel_bias_prior_edge.h  accel_bias_rw_edge.h  g2o_optimizer_header.h  gyro_bias_prior_edge.h  gyro_bias_rw_edge.h  loopclosure_optimizer.h  position_edge.h  pre_integration_edge.h  prior_nav_state_edge.h  relative_pose_edge.h  rotation_edge.h  velocity_edge.h  vertex_type.h
include/registration/: icp_optimized.h  incremental_ndt.h  loam_full_kdtree.h  loam_point_to_plane_ivox.h  loam_point_to_plane_kdtree.h  registration_interface.h
include/slam/: config_parameters.h  frontend.h  localization.h  loop_closure.h  preprocessing.h  split_map.h  system.h
launch/: localization.launch.py  localization_with_nonground.launch.py  mapping.launch.py  run.launch.py
msg/: CloudInfo.msg
src/: CMakeLists.txt  featureExtraction.cpp  imageProjection.cpp  imuPreintegration.cpp  mapOptimization.cpp  package.xml  relocalization_node.cpp
src/config/: params.yaml
src/imu/: data_synchronizer.cpp  pre_integration.cpp
src/include/lio_sam/: utility.hpp
src/ivox_map/: ivox_map.cpp  voxel_grid_node.cpp
src/lidar/: lidar_distortion_corrector.cpp  lidar_model.cpp
src/loam/: feature_extractor.cpp  pointcloud_projector.cpp
src/optimization/g2o/: accel_bias_prior_edge.cpp  accel_bias_rw_edge.cpp  gyro_bias_prior_edge.cpp  gyro_bias_rw_edge.cpp  loopclosure_optimizer.cpp  position_edge.cpp  pre_integration_edge.cpp  prior_nav_state_edge.cpp  relative_pose_edge.cpp  rotation_edge.cpp  velocity_edge.cpp
src/slam/: config_parameters.cpp  frontend.cpp  localization.cpp  loop_closure.cpp  preprocessing.cpp  split_map.cpp  system.cpp
src/src/: imageProjection.cpp  mapOptimization.cpp
